Create and Load Device

--- a/basics/public/index.html
+++ b/basics/public/index.html
@@ -39,6 +39,8 @@
     </div>
     <!-- Get socket.io from server (it auto serves) -->
     <script src="/socket.io/socket.io.js"></script>
+    <!-- MediaSoup client file -->
+    <script src="./mediasoup-client.min.js"></script>
 
     <!-- MediaSoup stuff -->
     <script src="./scripts.js"></script>
