done consumer functionality

--- a/recap/basics/public/index.html
+++ b/recap/basics/public/index.html
@@ -16,7 +16,7 @@
           <button id="create-producer" class="" disabled=true>Create Producer Transport</button>
           <button id="publish" class="" disabled=true>Publish feed</button>
           <button id="create-consumer" class="" disabled=true>Create Consumer Transport</button>
-          <button id="subscribe" class="" disabled=true>Subscribe to feed</button>
+          <button id="consume" class="" disabled=true>Subscribe to feed</button>
           <button id="disconnect" class="" disabled=true>Disconnect</button>
       </div>
       <!-- video feed (if available) -->
